added graphs and titles

--- a/Maxtemperature.html
+++ b/Maxtemperature.html
@@ -48,6 +48,11 @@
       <div class= "container">
 
       </div>
+
+      <div>
+        <h1>Max Temperature</h1>
+        <img class= "Bigimage" src= "Resources/assets_images/assets_images_Fig1.png">
+      </div>
 </body>
 
 </html>
