--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Weather page</title>
+    <title>Cloudiness</title>
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -47,6 +47,10 @@
       </nav>
       <div class= "container">
 
+      </div>
+      <div>
+        <h1>Cloudiness</h1>
+        <img class= "compimage" src= "Resources/assets_images/assets_images_Fig3.png">
       </div>
 </body>
 
