--- a/comparison.html
+++ b/comparison.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Weather page</title>
+    <title>Comparison</title>
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -48,6 +48,26 @@
       <div class= "container">
 
       </div>
+
+    <div>
+      <h1>Comparison: Latitude vs X</h1>
+    </div>
+    <div class= "row">
+      <div class= "col-md-6">
+          <img class= "compimage" src= "Resources/assets_images/assets_images_Fig1.png">
+      </div>
+      <div class= "col-md-6">
+          <img class= "compimage" src= "Resources/assets_images/assets_images_Fig2.png">
+      </div>
+  </div>
+  <div class= "row">
+      <div class= "col-md-6">
+          <img class= "compimage" src= "Resources/assets_images/assets_images_Fig3.png">
+      </div>
+      <div class= "col-md-6">
+          <img class= "compimage" src= "Resources/assets_images/assets_images_Fig4.png">
+      </div>
+  </div>    
 </body>
 
 </html>
