added info to pages

--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -49,7 +49,7 @@
 
       </div>
       <div>
-        <h1>Cloudiness</h1>
+        <h1 style="color: darkblue;">Cloudiness</h1>
         <img class= "compimage" src= "Resources/assets_images/assets_images_Fig3.png">
       </div>
 </body>
