--- a/Humidity.html
+++ b/Humidity.html
@@ -49,8 +49,8 @@
 
       </div>
       <div>
-        <h1>Humidity</h1>
-        <img class= "Bigimage" src= "Resources/assets_images/assets_images_Fig2.png">
+        <h1 style="color: darkblue;">Humidity</h1>
+        <img class= "compimage" src= "Resources/assets_images/assets_images_Fig2.png">
       </div>
 </body>
 
