--- a/Maxtemperature.html
+++ b/Maxtemperature.html
@@ -46,12 +46,46 @@
         </div>
       </nav>
       <div class= "container">
-
+        <div class= "row">
+            <div class= "col-md-7"> <!--there are 12 columns in a page so this one will have 7-->
+              <div>
+                <h1 style="color: darkblue;">Max Temperature</h1>
+                <img class= "compimage" src= "Resources/assets_images/assets_images_Fig1.png">
+                <p>
+                  As expected, the weather becomes significant warmer as one approaches the equator (0 Deg. Latitude).
+                  More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemishpere. 
+                  This may be due to the tilt of the earth at the time of the year this data was gathered. 
+                </p>
+              </div>
+            </div>
+            <div class= "col-md-5">
+                <h2 style="color: darkblue;">
+                    Visualization
+                </h2>
+                <hr>
+                <div class= "row">
+                    <div class= "col-md-6">
+                        <a target="_blank" href="Maxtemperature.html">
+                        <img class= "Smallimage" src= "Resources/assets_images/assets_images_Fig1.png">
+                    </div>
+                    <div class= "col-md-6">
+                      <a target="_blank" href="Humidity.html">
+                        <img class= "Smallimage" src= "Resources/assets_images/assets_images_Fig2.png">
+                    </div>
+                </div>
+                <div class= "row">
+                    <div class= "col-md-6">
+                      <a target="_blank" href="Cloudiness.html">
+                        <img class= "Smallimage" src= "Resources/assets_images/assets_images_Fig3.png">
+                    </div>
+                    <div class= "col-md-6">
+                      <a target="_blank" href="Windspeed.html">
+                        <img class= "Smallimage" src= "Resources/assets_images/assets_images_Fig4.png">
+                    </div>
+                </div>    
+            </div>
+        </div>
       </div>
-
-      <div>
-        <h1>Max Temperature</h1>
-        <img class= "Bigimage" src= "Resources/assets_images/assets_images_Fig1.png">
       </div>
 </body>
 
