--- a/Windspeed.html
+++ b/Windspeed.html
@@ -49,8 +49,8 @@
 
       </div>
       <div>
-        <h1>Windspeed</h1>
-        <img class= "Bigimage" src= "Resources/assets_images/assets_images_Fig4.png">
+        <h1 style="color: darkblue;">Windspeed</h1>
+        <img class= "compimage" src= "Resources/assets_images/assets_images_Fig4.png">
       </div>
 </body>
 
