--- a/comparison.html
+++ b/comparison.html
@@ -50,7 +50,7 @@
       </div>
 
     <div>
-      <h1>Comparison: Latitude vs X</h1>
+      <h1 style="color: darkblue;">Comparison: Latitude vs X</h1>
     </div>
     <div class= "row">
       <div class= "col-md-6">
