--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -53,7 +53,9 @@
                 <img class= "compimage" src= "Resources/assets_images/assets_images_Fig3.png">
               </div>
               <p>
-               
+               This graph shows no correlation between cloudinees and the cities latitude. 
+               It appears that cloudiness shows no discrimation between latitude of city. 
+               Mother nature is it's own boss. 
               </p>
             </div>
             <div class= "col-md-5">
