--- a/Humidity.html
+++ b/Humidity.html
@@ -53,7 +53,8 @@
               <img class= "compimage" src= "Resources/assets_images/assets_images_Fig2.png">
             </div>  
               <p>
-              
+              When looking at this graph, humidity and latitude show no strong correlation. 
+              The only information that can be gathered from this image is that there appears to be higher himidity then lower himidity across cities.   
               </p>
             </div>
             <div class= "col-md-5">
