--- a/Windspeed.html
+++ b/Windspeed.html
@@ -53,7 +53,9 @@
                 <img class= "compimage" src= "Resources/assets_images/assets_images_Fig4.png">
               </div>
               <p>
-                
+                According to the graph, there seems to be no strong relationship between windspeed and latitude. 
+                However, you can see more cities with higher windspeed at latitudes further from the equator.
+
               </p>
             </div>
             <div class= "col-md-5">
